# radar-robotcar-dataset-ros

./: CMakeLists.txt  README.md  package.xml
gui/: RobotCarPlayer_en_US.ts  image.qrc
include/: oxford_sensor.h
include/radar_robotcar_dataset_ros2/: config.hpp  rclthread.hpp  robotcarplayer.h
include/radar_robotcar_dataset_ros2/sensor_suite/: cameras.hpp  gps.hpp  lidars.hpp  radar.hpp
launch/: OxFord_Sensors.launch  mapviz.launch.py  rviz2.launch.py
launch/mapviz/: mapviz.mvc  radar_robotcar_dataset_ros.mvc  readme.txt
launch/rviz/: radar_robotcar_dataset_ros.rviz
launch/rviz2/: robotcar.rviz
msg/: Gps.msg  Ins.msg
scripts/: OxFord_Radar.py  radar.py
src/: OxFord_Sensors.cpp  main.cpp  oxford_sensor.cpp  rclthread.cpp  robotcarplayer.cpp  robotcarplayer.ui
